LM Exercise Two

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LM Tech hub quiz Two</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lm tech Exercise 2</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-<body>
-  
-</body>
-</html>
+ <body>
+  <header>
+    <div class="logo">
+        <img src="./images/game-logo.jpg" alt="Logo" />
+    </div>
+    <nav>
+      <a href="#">Game Up</a>
+      <a href="#">Game Level</a>
+      <a href="#">Change X-Man</a>
+      <a href="#">Services</a>
+  </nav>
+    <main>
+        <div class="grid-container">
+          <div class="grid-item">
+            <img class="image" src="./images/game-1.jpg" alt="Image 1">
+            <div class="description">Game 1</div>
+          </div>
+          <div class="grid-item">
+            <img class="image" src="./images/game-2.jpg" alt="Image 2">
+            <div class="description">Game 2</div>
+          </div>
+          <div class="grid-item">
+            <img class="image" src="./images/game-3.jpg" alt="Image 3">
+            <div class="description">Game 3</div>
+          </div>
+          <div class="grid-item">
+            <img class="image" src="./images/game-4.jpg" alt="Image 4">
+            <div class="description">Game 4</div>
+          </div>
+          <div class="grid-item">
+            <img class="image" src="./images/game-5.jpg" alt="Image 5">
+            <div class="description">Game 5</div>
+          </div>
+          <div class="grid-item">
+            <img class="image" src="./images/game-1.jpg" alt="Image 6">
+            <div class="description">Game 6</div>
+          </div>
+          <div class="grid-item">
+            <img class="image" src="./images/game-2.jpg" alt="Image 7">
+            <div class="description">Game 7</div>
+          </div>
+          <div class="grid-item">
+            <img class="image" src="./images/game-3.jpg" alt="Image 8">
+            <div class="description">Game 8</div>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa iure id, adipisci tempora voluptatibus! Ratione, magni ipsum. Omnis animi aspernatur officiis sapiente aperiam at eligendi a quis praesentium ad unde vero sit, autem magnam ullam enim mollitia est voluptates inventore libero porro iste corporis! Odit debitis ullam itaque magni! Ullam, quas? Odio, blanditiis excepturi! Quaerat explicabo, tempora est nam ut voluptas officia </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa iure id, adipisci tempora voluptatibus! Ratione, magni ipsum. Omnis animi aspernatur officiis sapiente aperiam at eligendi a quis praesentium ad unde vero sit, autem magnam ullam enim mollitia est voluptates inventore libero porro iste corporis! Odit debitis ullam itaque magni! Ullam, quas? Odio, blanditiis excepturi! Quaerat explicabo, tempora est nam ut voluptas officia </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa iure id, adipisci tempora voluptatibus! Ratione, magni ipsum. Omnis animi aspernatur officiis sapiente aperiam at eligendi a quis praesentium ad unde vero sit, autem magnam ullam enim mollitia est voluptates inventore libero porro iste corporis! Odit debitis ullam itaque magni! Ullam, quas? Odio, blanditiis excepturi! Quaerat explicabo, tempora est nam ut voluptas officia </p>
+    </footer>
+    </body>
+    </html>
